--- a/src/app/pages/form/form.component.html
+++ b/src/app/pages/form/form.component.html
@@ -2,32 +2,65 @@
 
         <div class="bg-gray-200 w-3/5 p-4 border border-orange-300 rounded-lg shadow-md modal">
 
-            <div class="flex flex-col bg-white w-full border-dashed p-4 gap-4">
-                <div class="flex flex-col items-center justify-center h-full bg-gray-100 py-6 gap-5 w-[100%] overflow-auto">
-                  <div *ngFor="let question of addedQuestions" class="w-full max-w-lg bg-white p-4 rounded shadow flex justify-between items-center">
-                    <div class="space-y-2 w-full">
-                      <p class="text-lg font-semibold">{{ question.question }} ({{ question.questionType }})</p>
-                      
-                      <div *ngIf="question.questionType === 'text'" class="w-5/6">
-                        <input type="text" placeholder="Answer" class="w-full border border-gray-300 p-2 mt-2 rounded" />
-                      </div>
-              
-                      <div *ngIf="question.questionType === 'radio' || question.questionType === 'checkbox'">
-                        <div *ngFor="let option of question.answers" class="flex items-center space-x-2">
-                          <input [type]="question.questionType" name="question" class="w-4 h-4" /> 
-                          <span>{{ option.answer }}</span> <!-- Correctly reference the answer property -->
-                        </div>
-                      </div>
-              
-                      <div *ngIf="question.questionType === 'dropdown'">
-                        <select class="w-full border border-gray-300 p-2 rounded">
-                          <option *ngFor="let option of question.answers" [value]="option.answer">{{ option.answer }}</option> <!-- Correctly reference the answer property -->
-                        </select>
-                      </div>
+ 
+          <div class="flex flex-col bg-white w-full border-dashed p-4 gap-4">
+            <div class="flex flex-col items-center justify-center h-full bg-gray-100 py-6 gap-5 w-[100%] overflow-auto">
+              <div *ngFor="let question of addedQuestions; let i = index" class="relative w-full max-w-lg bg-white p-4 rounded shadow flex items-center">
+                <!-- Delete Button with FontAwesome Icon (Positioned at the top-right corner) -->
+                <div class="absolute" style="top: 10%;right: 3%;">
+
+                  <button mat-icon-button [matMenuTriggerFor]="menu">
+                    <mat-icon>more_vert</mat-icon>
+                  </button>
+        
+                  <mat-menu #menu="matMenu">
+                    <button mat-menu-item (click)="editForm(question, i)">
+                      <i class="fa-solid fa-pen-to-square text-lg"></i>
+                      <span class="text-lg mx-4">Edit</span>
+                    </button>
+                    <button mat-menu-item (click)="copyForm(question, i)">
+                      <i class="fa-sharp fa-solid fa-copy text-lg"></i>
+                      <span class="text-lg mx-4">Copy</span>
+                    </button>
+                    <button mat-menu-item (click)="deletequestion(i)">
+                      <i class="fas fa-trash text-lg"></i>
+                      <span class="text-lg mx-4">Delete</span>
+                    </button>
+                  </mat-menu>
+                  <!-- <button (click)="deletequestion(i)" class="bg-red-500 hover:bg-red-700 h-10 w-10 text-white p-2 rounded-full transition duration-200">
+                    <i class="fas fa-trash"></i>
+                  </button> -->
+                </div>
+          
+                <div class="space-y-2 w-full">
+                  <!-- Display the question and type -->
+                  <p class="text-lg font-semibold">{{i+1}}. {{ question.question }}</p>
+                  
+                  <!-- Text Input for 'text' question type -->
+                  <div *ngIf="question.questionType === 'text'" class="w-5/6">
+                    <input type="text" placeholder="Answer" class="w-full border border-gray-300 p-2 mt-2 rounded" />
+                  </div>
+          
+                  <!-- Radio and Checkbox question types -->
+                  <div *ngIf="question.questionType === 'radio' || question.questionType === 'checkbox'">
+                    <div *ngFor="let option of question.answers" class="flex items-center space-x-2">
+                      <input [type]="question.questionType" name="question" class="w-4 h-4" /> 
+                      <span>{{ option.answer }}</span>
                     </div>
+                  </div>
+          
+                  <!-- Dropdown question type -->
+                  <div *ngIf="question.questionType === 'dropdown'">
+                    <select class="w-full border border-gray-300 p-2 rounded">
+                      <option *ngFor="let option of question.answers" [value]="option.answer">{{ option.answer }}</option>
+                    </select>
                   </div>
                 </div>
               </div>
+            </div>
+          </div>
+          
+
               
               
             
@@ -37,7 +70,7 @@
                 <div class="flex justify-between gap-5">
                     <div class="text-left">
                         <input type="text" placeholder="Question" [(ngModel)]="questionText"
-                             class="bg-gray-100 px-2 h-8 outline-none rounded-md" />
+                             class="questionInput w-full bg-gray-100 px-2 h-8 outline-none rounded-md" />
                     </div>
                     <div>
 
@@ -65,9 +98,9 @@
                             <label class="block text-gray-700 font-bold mb-2">Enter Options</label>
                             <div *ngFor="let option of questionOptions; let i = index; trackBy: trackByFn" class="flex items-center space-x-2 mb-2">
                                 <input type="text" [(ngModel)]="questionOptions[i]" placeholder="Option {{ i + 1 }}" class="w-3/5 border border-gray-300 p-2 rounded focus:outline-none focus:ring-2 focus:ring-blue-500"/>
-                                <button (click)="removeOption(i)" class="text-red-500 hover:text-red-700 font-medium rounded focus:outline-none">
+                                <!-- <button (click)="removeOption(i)" class="text-red-500 hover:text-red-700 font-medium rounded focus:outline-none">
                                     Remove
-                                </button>
+                                </button> -->
                             </div>
                             <button (click)="addOption()" class="text-black py-1 px-3 rounded border-b border-transparent hover:underline">Add Option</button>
                         </div>
@@ -94,14 +127,8 @@
             <div class="rounded-full w-8 border-2 text-center">
                 <i class="fas fa-eye text-sm"></i> <!-- FontAwesome Eye Icon -->
             </div>
-            <span>Preview</span>
-        </button>
-        <!-- <button (click)="saveForm()" class="flex items-center space-x-2">
-          <div class="rounded-full w-8 border-2 text-center">
-              <i class="fas fa-eye text-sm"></i>
-          </div>
-          <span>Saved Form</span>
-      </button> -->
+            <span>Preview and Save</span>
+        </button>        
       <button class="bg-green-500 text-white py-2 px-4 rounded mt-4" (click)="goToSavedForms()">
         Show All Saved Forms
       </button>
