--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,51 +1,3 @@
-<!-- <div class="flex p-5 bg-slate-100 border-dashed">
-  <div class="flex flex-wrap gap-6 justify-start">
-    <div
-      class="w-96 h-52 flex justify-center items-center bg-blue-100 border-2 rounded-lg"
-    >
-      <button
-        (click)="navigateToCreateForm()"
-        class="flex items-center space-x-2 text-blue-600 text-lg"
-      >
-        <span class="text-2xl">+</span>
-        <span>Add Form</span>
-      </button>
-    </div>
-
-    @for(form of savedForms; track form){
-    <div class="w-96 h-52 flex flex-col justify-center bg-blue-100 border-2 rounded-lg px-2 cursor-pointer">
-        <div class="flex justify-between gap-4 px-5" (click)="previewForm(form)">
-
-            <div class=" w-2/5 text-center mb-4 border-2 bg-white flex justify-center items-center">
-                <img src="https://tse1.mm.bing.net/th?q=Search+Magnifying+Glass+Icon&w=120&h=120&c=1&rs=1&qlt=90&cb=1&pid=InlineBlock&mkt=en-IN&cc=IN&setlang=en&adlt=moderate&t=1&mw=247" 
-                alt="Template Preview" class="w-6 h-6 object-cover">
-            </div>
-            
-            <div class="w-3/5 flex flex-col text-wrap">
-                <h2 style="font-size: 20px;" class="text-blue-500 text-sm">Template</h2>
-                <p style="font-size: 16px; font-weight:500;">{{form.formName}}</p>
-
-            </div>
-
-        </div>
-       
-        
-        <div class="flex justify-between px-5">
-            <button routerLink="/form" class="bg-green-500 text-white py-1 px-4 rounded">
-                Edit
-            </button>
-            <button (click)="delete(form.formId)" class="bg-red-500 text-white py-1 px-4 rounded">
-                Delete
-            </button>
-            
-        </div>
-          
-    </div>
-    }
-  </div>
-</div> -->
-
-
 <div class="flex p-5 bg-slate-100 border-dashed">
     <div class="flex flex-wrap gap-6 justify-start ">
       <div class="w-96 h-52 flex justify-center items-center bg-blue-100 border-2 rounded-lg">
@@ -56,7 +8,30 @@
       </div>
   
       @for(form of savedForms; track form){
-      <div class="w-96 h-52 flex flex-col justify-between  py-3 border-2 rounded-lg px-2 cursor-pointer">
+      <div class="w-96 h-52 flex flex-col justify-end border-black py-3 border rounded-lg px-2 cursor-pointer">
+        
+        <div class="flex justify-end px-5">
+          <button mat-icon-button [matMenuTriggerFor]="menu">
+            <mat-icon>more_vert</mat-icon>
+          </button>
+
+          <mat-menu #menu="matMenu">
+            <button mat-menu-item (click)="editForm(form)">
+              <i class="fa-solid fa-pen-to-square text-lg"></i>
+              <span class="text-lg mx-4">Edit</span>
+            </button>
+            <button mat-menu-item (click)="copyForm(form)">
+              <i class="fa-sharp fa-solid fa-copy text-lg"></i>
+              <span class="text-lg mx-4">Copy</span>
+            </button>
+            <button mat-menu-item (click)="delete(form.formId)">
+              <i class="fas fa-trash text-lg"></i>
+              <span class="text-lg mx-4">Delete</span>
+            </button>
+          </mat-menu>
+          
+        </div>
+        
         <div class="flex justify-between gap-4 px-5" (click)="previewForm(form)">
           <div class="w-2/5 h-32 flex justify-center items-center mb-4 border-2 bg-slate-50 rounded-lg">
             <img src="https://tse3.mm.bing.net/th?q=Search+Icon+White+Background&w=120&h=120&c=1&rs=1&qlt=90&cb=1&pid=InlineBlock&mkt=en-IN&cc=IN&setlang=en&adlt=moderate&t=1&mw=247" 
@@ -68,15 +43,7 @@
             <p style="font-size: 16px; font-weight: 500;">{{form.formName}}</p>
           </div>
         </div>
-        
-        <div class="flex justify-between px-5">
-          <button routerLink="/form" class="bg-green-500 text-white py-1 px-4 rounded">
-            Edit
-          </button>
-          <button (click)="delete(form.formId)" class="bg-red-500 text-white py-1 px-4 rounded">
-            Delete
-          </button>
-        </div>
+
       </div>
       }
     </div>
