--- a/src/app/pages/saved-form/saved-form.component.html
+++ b/src/app/pages/saved-form/saved-form.component.html
@@ -16,6 +16,14 @@
   </div>
   
   <ng-template #noForms>
-    <p>No saved forms available</p>
+    <div class="container mx-auto p-4 flex flex-col items-center justify-center min-h-screen">
+
+      <div class="animate-spin rounded-full h-16 w-16 border-t-4 border-green-500 border-solid border-opacity-50 mb-6"></div>
+      
+       <p class="text-xl font-semibold text-gray-800 mb-2">Loading...</p>
+      
+      <p class="text-gray-600">Please wait while we load your forms</p>
+    </div>
+    
   </ng-template>
   
